Firmware/E33_Panel_240728/MDK-ARM/.vscode/uv4.log
*** Using Compiler 'V6.19', folder: 'D:\AppGallery\Software\Keil5\Keil_v5\ARM\ARMCLANG\Bin'
Build target 'Panel'
compiling gpio.c...
compiling tim.c...
compiling dma.c...
compiling ltdc.c...
compiling fdcan.c...
compiling adc.c...
compiling dma2d.c...
compiling usart.c...
compiling stm32h7xx_hal_msp.c...
../Core/Src/main.c(35): error: 'guiapi.h' file not found
#include "guiapi.h"
         ^~~~~~~~~~
1 error generated.
compiling main.c...
compiling stm32h7xx_it.c...
compiling stm32h7xx_hal_hsem.c...
compiling stm32h7xx_hal_flash.c...
compiling stm32h7xx_hal_rcc.c...
compiling stm32h7xx_hal_gpio.c...
compiling stm32h7xx_hal_flash_ex.c...
compiling stm32h7xx_hal_dma_ex.c...
compiling stm32h7xx_hal_rcc_ex.c...
compiling stm32h7xx_hal_mdma.c...
compiling stm32h7xx_hal_adc.c...
compiling stm32h7xx_hal_pwr.c...
compiling stm32h7xx_hal_adc_ex.c...
compiling stm32h7xx_hal_dma.c...
compiling stm32h7xx_hal_cortex.c...
compiling stm32h7xx_hal_pwr_ex.c...
compiling stm32h7xx_hal.c...
compiling stm32h7xx_hal_i2c_ex.c...
compiling stm32h7xx_hal_exti.c...
compiling stm32h7xx_hal_ltdc_ex.c...
compiling stm32h7xx_hal_dma2d.c...
compiling system_stm32h7xx.c...
compiling stm32h7xx_hal_ltdc.c...
compiling stm32h7xx_hal_uart_ex.c...
compiling mycan.c...
compiling myusart.c...
compiling stm32h7xx_hal_tim_ex.c...
compiling rgbtft.c...
compiling yzusart.c...
compiling mygui.c...
compiling encoder.c...
compiling lightsensor.c...
compiling led_bottun.c...
compiling stm32h7xx_hal_i2c.c...
compiling atk_mw8266d.c...
compiling stm32h7xx_hal_uart.c...
compiling atk_mw8266d_uart.c...
compiling wifiapp.c...
compiling lv_port_fs_template.c...
compiling stm32h7xx_hal_fdcan.c...
compiling ws2812.c...
compiling canapp.c...
compiling stm32h7xx_hal_tim.c...
compiling lv_port_disp_template.c...
compiling lv_disp.c...
compiling lv_obj_class.c...
compiling lv_port_indev_template.c...
compiling lv_group.c...
compiling lv_event.c...
compiling lv_obj_draw.c...
compiling lv_indev_scroll.c...
compiling lv_indev.c...
compiling lv_obj.c...
compiling lv_theme.c...
compiling lv_obj_style_gen.c...
compiling lv_draw_pxp_blend.c...
compiling lv_draw_pxp.c...
compiling lv_gpu_nxp_pxp.c...
compiling lv_obj_tree.c...
compiling lv_gpu_arm2d.c...
compiling lv_obj_scroll.c...
compiling lv_obj_pos.c...
compiling lv_draw_vglite.c...
compiling lv_gpu_nxp_pxp_osa.c...
compiling lv_draw_vglite_arc.c...
compiling lv_draw_vglite_blend.c...
compiling lv_draw_vglite_line.c...
compiling lv_draw_vglite_rect.c...
compiling lv_obj_style.c...
compiling lv_vglite_utils.c...
compiling lv_vglite_buf.c...
compiling lv_gpu_d2_draw_label.c...
compiling lv_draw_sdl.c...
compiling lv_draw_sdl_arc.c...
compiling lv_draw_sdl_bg.c...
compiling lv_draw_sdl_composite.c...
compiling lv_gpu_d2_ra6m3.c...
compiling lv_refr.c...
compiling lv_draw_sdl_img.c...
compiling lv_draw_sdl_label.c...
compiling lv_draw_sdl_line.c...
compiling lv_draw_sdl_layer.c...
compiling lv_draw_sdl_mask.c...
compiling lv_draw_sdl_polygon.c...
compiling lv_draw_sdl_rect.c...
compiling lv_draw_sdl_texture_cache.c...
compiling lv_draw_sdl_stack_blur.c...
compiling lv_draw_sdl_utils.c...
compiling lv_draw_sw.c...
compiling lv_gpu_stm32_dma2d.c...
compiling lv_draw_sw_dither.c...
compiling lv_draw_sw_arc.c...
compiling lv_draw_sw_gradient.c...
compiling lv_draw_sw_layer.c...
compiling lv_draw_sw_polygon.c...
compiling lv_gpu_swm341_dma2d.c...
compiling lv_draw_sw_line.c...
compiling lv_draw_sw_letter.c...
compiling lv_draw_sw_img.c...
compiling lv_draw.c...
compiling lv_draw_arc.c...
compiling lv_draw_layer.c...
compiling lv_draw_sw_transform.c...
compiling lv_draw_rect.c...
compiling lv_draw_img.c...
compiling lv_draw_line.c...
compiling lv_draw_label.c...
compiling lv_draw_transform.c...
compiling lv_draw_triangle.c...
compiling lv_draw_sw_blend.c...
compiling lv_img_cache.c...
compiling lv_img_buf.c...
compiling lv_draw_sw_rect.c...
compiling lv_ffmpeg.c...
compiling lv_freetype.c...
compiling lv_bmp.c...
compiling lv_fs_posix.c...
compiling lv_fs_fatfs.c...
compiling lv_img_decoder.c...
compiling lv_flex.c...
compiling lv_fs_win32.c...
compiling lv_fs_stdio.c...
compiling lv_grid.c...
compiling gifdec.c...
compiling lv_draw_mask.c...
compiling lv_gif.c...
compiling tjpgd.c...
compiling lv_fragment.c...
compiling lv_qrcode.c...
compiling lodepng.c...
compiling lv_png.c...
compiling lv_fragment_manager.c...
compiling lv_rlottie.c...
compiling lv_sjpg.c...
compiling lv_gridnav.c...
compiling lv_ime_pinyin.c...
compiling lv_imgfont.c...
compiling lv_msg.c...
compiling lv_snapshot.c...
compiling lv_monkey.c...
compiling lv_animimg.c...
compiling lv_theme_basic.c...
compiling lv_theme_mono.c...
compiling lv_calendar_header_arrow.c...
compiling lv_calendar_header_dropdown.c...
compiling lv_calendar.c...
compiling lv_keyboard.c...
compiling lv_imgbtn.c...
compiling lv_list.c...
compiling lv_colorwheel.c...
compiling lv_led.c...
compiling lv_menu.c...
compiling lv_theme_default.c...
compiling lv_msgbox.c...
compiling lv_meter.c...
compiling lv_spinner.c...
compiling lv_tileview.c...
compiling lv_font.c...
compiling lv_tabview.c...
compiling lv_extra.c...
compiling lv_spinbox.c...
compiling lv_win.c...
compiling lv_chart.c...
compiling lv_font_fmt_txt.c...
compiling lv_font_dejavu_16_persian_hebrew.c...
compiling lv_font_montserrat_8.c...
compiling lv_font_montserrat_10.c...
compiling qrcodegen.c...
compiling lv_font_montserrat_12.c...
compiling lv_font_montserrat_16.c...
compiling lv_font_montserrat_12_subpx.c...
compiling lv_font_montserrat_14.c...
compiling lv_span.c...
compiling lv_font_montserrat_20.c...
compiling lv_font_montserrat_18.c...
compiling lv_font_loader.c...
compiling lv_font_montserrat_22.c...
compiling lv_font_montserrat_26.c...
compiling lv_font_montserrat_28.c...
compiling lv_font_montserrat_24.c...
compiling lv_font_montserrat_28_compressed.c...
compiling lv_font_montserrat_30.c...
compiling lv_font_montserrat_32.c...
compiling lv_font_montserrat_34.c...
compiling lv_font_montserrat_38.c...
compiling lv_font_montserrat_36.c...
compiling lv_font_montserrat_40.c...
compiling lv_hal_tick.c...
compiling lv_font_unscii_8.c...
compiling lv_font_montserrat_42.c...
compiling lv_hal_indev.c...
compiling lv_font_unscii_16.c...
compiling lv_font_montserrat_44.c...
compiling lv_font_montserrat_48.c...
compiling lv_font_montserrat_46.c...
compiling lv_font_simsun_16_cjk.c...
compiling lv_anim.c...
compiling lv_hal_disp.c...
compiling lv_bidi.c...
compiling lv_async.c...
compiling lv_log.c...
compiling lv_anim_timeline.c...
compiling lv_gc.c...
compiling lv_area.c...
compiling lv_ll.c...
compiling lv_math.c...
compiling lv_color.c...
compiling lv_fs.c...
compiling lv_lru.c...
compiling lv_templ.c...
compiling lv_timer.c...
compiling lv_style_gen.c...
compiling lv_utils.c...
compiling lv_style.c...
compiling lv_txt_ap.c...
compiling lv_printf.c...
compiling lv_btn.c...
compiling lv_mem.c...
compiling lv_bar.c...
compiling lv_txt.c...
compiling lv_arc.c...
compiling lv_tlsf.c...
compiling lv_checkbox.c...
compiling lv_objx_templ.c...
compiling lv_line.c...
compiling lv_img.c...
compiling lv_canvas.c...
compiling lv_btnmatrix.c...
compiling lv_switch.c...
compiling lv_dropdown.c...
compiling lv_slider.c...
compiling lv_roller.c...
compiling events_init.c...
compiling lv_label.c...
compiling gui_guider.c...
compiling custom.c...
compiling lv_font_Antonio_Regular_25.c...
compiling lv_table.c...
compiling lv_font_montserratMedium_16.c...
compiling lv_textarea.c...
compiling _elitr_alpha_363x84.c...
compiling lv_font_arial_45.c...
compiling lv_font_montserratMedium_17.c...
compiling lv_font_montserratMedium_18.c...
compiling lv_font_montserratMedium_19.c...
compiling lv_font_montserratMedium_20.c...
compiling lv_font_montserratMedium_25.c...
compiling lv_font_montserratMedium_30.c...
compiling lv_font_montserratMedium_35.c...
compiling lv_font_montserratMedium_38.c...
compiling lv_font_montserratMedium_40.c...
compiling lv_font_montserratMedium_42.c...
compiling lv_font_montserratMedium_45.c...
compiling lv_font_montserratMedium_80.c...
compiling lv_font_simsun_18.c...
compiling setup_scr_screen.c...
compiling lv_font_montserratMedium_110.c...
"Panel\Panel.axf" - 1 Error(s), 0 Warning(s).
Target not created.
Build Time Elapsed:  00:00:20
